--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.config
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.config
@@ -5,26 +5,25 @@
   </configSections>
 
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
   </startup>
 
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
-      <target xsi:type="File" name="file" fileName="${basedir}/logs/${shortdate}.log"
-              layout="${longdate} | ${uppercase:${level}} | ${logger} | ${message}" />
+      <target xsi:type="File" name="file" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} | ${uppercase:${level}} | ${logger} | ${message}"/>
     </targets>
 
     <rules>
-      <logger name="*" minlevel="Trace" writeTo="file" />
+      <logger name="*" minlevel="Trace" writeTo="file"/>
     </rules>
   </nlog>
 
   <appSettings>
 
     <!-- Адрес сервиса для работы с данными -->
-    <add key="DataServiceUrl" value="http://localhost:4444" />
+    <add key="DataServiceUrl" value="http://localhost:4444"/>
 
     <!--Режим работы (Mock - тестовые данные, Server - сервер )-->
-    <add key="WorkMode" value="Server" />
+    <add key="WorkMode" value="Server"/>
   </appSettings>
 </configuration>
