--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Germadent.Rma.App</RootNamespace>
     <AssemblyName>Germadent.Rma.App</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -85,11 +85,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Reporting\IClipboardHelper.cs" />
     <Compile Include="Configuration\RmaConfiguration.cs" />
     <Compile Include="Converters\BranchTypeToStringConverter.cs" />
     <Compile Include="Infrastructure\CatalogUIOperations.cs" />
     <Compile Include="Infrastructure\ICatalogUIOperations.cs" />
-    <Compile Include="Reporting\ClipboardWorks.cs" />
     <Compile Include="Reporting\IPrintableOrderConverter.cs" />
     <Compile Include="Reporting\IReporter.cs" />
     <Compile Include="Reporting\PrintableOrder.cs" />
