--- a/src/Germadent.DataAccessServiceCore/Germadent.DataAccessServiceCore.csproj
+++ b/src/Germadent.DataAccessServiceCore/Germadent.DataAccessServiceCore.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Nancy" Version="2.0.0" />
+    <PackageReference Include="Nancy.Bootstrappers.Unity" Version="1.4.1" />
+    <PackageReference Include="Nancy.Hosting.Self" Version="2.0.0" />
     <PackageReference Include="Topshelf" Version="4.2.1" />
     <PackageReference Include="Unity" Version="5.11.5" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
@@ -16,12 +18,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Germadent.Rma.ModelCore\Germadent.Rma.ModelCore.csproj" />
     <ProjectReference Include="..\Germadent.UserManagementCenter.Model\Germadent.UserManagementCenter.Model.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.CSharp">
-      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.2\Microsoft.CSharp.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 
