--- a/src/Germadent.WebApi/appsettings.json
+++ b/src/Germadent.WebApi/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "ConnectionString": "Data Source=89.189.186.48;Initial Catalog=Germadent;Integrated Security=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User Id=ofm; Password=gdl2020"
+  "ConnectionString": "Data Source=89.189.186.48;Initial Catalog=Germadent;User Id=ofm; Password=gdl2020"
 }
