--- a/src/Germadent.WebApi/Germadent.WebApi.csproj
+++ b/src/Germadent.WebApi/Germadent.WebApi.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.6.0-3.final" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
-    <PackageReference Include="Unity" Version="5.11.5" />
+    <PackageReference Include="Unity" Version="5.11.6" />
   </ItemGroup>
 
   <ItemGroup>
