--- a/src/Germadent.UserManagementCenter.App/Germadent.UserManagementCenter.App.csproj
+++ b/src/Germadent.UserManagementCenter.App/Germadent.UserManagementCenter.App.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.10.1" />
     <PackageReference Include="Unity" Version="5.11.6" />
   </ItemGroup>
 
