--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -8,12 +8,14 @@
 
   <ItemGroup>
     <None Remove="logo.png" />
+    <None Remove="packages.config" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.7.0" />
+    <PackageReference Include="NLog.Config" Version="4.7.0" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
     <PackageReference Include="Unity" Version="5.11.6" />
   </ItemGroup>
