Исправили некоторые ошибки и немножко порефакторили

--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -37,4 +37,13 @@
     </Resource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Templates\GermadentLab_MC.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\GermadentLab_ZTL.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
