Развертывание в качестве сервиса, обновление роли в ЦУП

--- a/src/Germadent.WebApi/Properties/launchSettings.json
+++ b/src/Germadent.WebApi/Properties/launchSettings.json
@@ -17,6 +17,7 @@
     },
     "Germadent.WebApi": {
       "commandName": "Project",
+      "commandLineArgs": "c",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
