--- a/src/Germadent.WebApi/Germadent.WebApi.csproj
+++ b/src/Germadent.WebApi/Germadent.WebApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.WindowsServices" Version="3.1.4" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.6.0-3.final" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
