--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -5,6 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <FileVersion>1.0.0.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
