Начал добавлять пользователей

--- a/src/Germadent.WebApi/appsettings.json
+++ b/src/Germadent.WebApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Data Source=89.189.186.48;Initial Catalog=Germadent;User Id=ofm; Password=gdl2020;MultipleActiveResultSets=true",
+  "ConnectionString": "Data Source=89.189.186.48;Initial Catalog=Umc;User Id=sa; Password=asza;MultipleActiveResultSets=true",
   "AllowedHosts": "*",
-  "Urls": "http://192.168.12.32:4444"
+  "Urls": "http://localhost:5555"
 }
