Добавил 2 свойства в копирование в Excel

--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.config
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.config
@@ -21,7 +21,7 @@
   <appSettings>
 
     <!-- Адрес сервиса для работы с данными -->
-    <add key="DataServiceUrl" value="http://192.168.15.13:5000"/>
+    <add key="DataServiceUrl" value="http://localhost:5000"/>
 
     <!--Режим работы (Mock - тестовые данные, Server - сервер )-->
     <add key="WorkMode" value="Server"/>
