--- a/src/Germadent.WebApi/appsettings.json
+++ b/src/Germadent.WebApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Data Source=89.189.186.48;Initial Catalog=Umc;User Id=sa; Password=asza;MultipleActiveResultSets=true",
+  "ConnectionString": "Data Source=192.168.15.13;Initial Catalog=Germadent;User Id=ofm; Password=gdl2020;MultipleActiveResultSets=true",
   "AllowedHosts": "*",
   "Urls": "http://localhost:5000"
 }
