--- a/src/Germadent.WebApi/appsettings.json
+++ b/src/Germadent.WebApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Data Source=89.189.186.48;Initial Catalog=Germadent_Develop;User Id=ofm; Password=gdl2020;MultipleActiveResultSets=true",
+  "ConnectionString": "Data Source=89.189.186.48;Initial Catalog=UMC;User Id=sa; Password=asza;MultipleActiveResultSets=true",
   "AllowedHosts": "*",
   "Urls": "http://*:5000"
 }
