--- a/src/Germadent.TestUtils/Germadent.TestUtils.csproj
+++ b/src/Germadent.TestUtils/Germadent.TestUtils.csproj
@@ -7,8 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.14.1" />
     <PackageReference Include="Moq.AutoMock" Version="2.0.0" />
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
   </ItemGroup>
 
 </Project>
