--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -27,6 +27,7 @@
     <ProjectReference Include="..\..\Germadent.Common\Germadent.Common.csproj" />
     <ProjectReference Include="..\..\Germadent.Rma.Model\Germadent.Rma.Model.csproj" />
     <ProjectReference Include="..\..\Germadent.UI\Germadent.UI.csproj" />
+    <ProjectReference Include="..\..\Germadent.UserManagementCenter.Model\Germadent.UserManagementCenter.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
