Хранимки для работы с ценами

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ src/Germadent.Rma.ModelCore/obj/
 src/Germadent.Rma.ModelCore/bin/
 src/Germadent.WebApi/bin/
 src/Germadent.WebApi/obj/
+db/Germadent/Germadent.DB/Germadent.DB.dbmdl
