--- a/src/Germadent.Rma.App/Germadent.Rma.App/App.config
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/App.config
@@ -2,6 +2,9 @@
 <configuration>
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System.Configuration.ConfigurationManager, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" >
+      <section name="Germadent.Rma.App.Properties.Settings" type="System.Configuration.ClientSettingsSection, System.Configuration.ConfigurationManager, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
 
   <startup>
@@ -26,4 +29,11 @@
     <!--Режим работы (Mock - тестовые данные, Server - сервер )-->
     <add key="WorkMode" value="Server"/>
   </appSettings>
+  <userSettings>
+    <Germadent.Rma.App.Properties.Settings>
+      <setting name="LastLogin" serializeAs="String">
+        <value />
+      </setting>
+    </Germadent.Rma.App.Properties.Settings>
+  </userSettings>
 </configuration>
