Добавили прототип утилиты процессинга construction файлов

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ src/Germadent.DataGenerator.App/obj/
 src/Utils/Corcon/Corcon/bin/
 src/Utils/Corcon/Corcon/obj/
 src/Utils/Corcon/.vs/
+src/Utils/CorrectionConstructionFile/bin/
+src/Utils/CorrectionConstructionFile/obj/
