Изменение логики работы программы

--- a/src/Utils/CorrectionConstructionFile/Germadent.CorrectionConstructionFile.App.csproj
+++ b/src/Utils/CorrectionConstructionFile/Germadent.CorrectionConstructionFile.App.csproj
@@ -8,10 +8,14 @@
 
   <ItemGroup>
     <None Remove="Model\ImplantDictionary.json" />
+    <None Remove="Model\ImplantSystemsDictionary.json" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Model\ImplantDictionary.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Model\ImplantSystemsDictionary.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
