--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ src/Utils/Corcon/Corcon/obj/
 src/Utils/Corcon/.vs/
 src/Utils/CorrectionConstructionFile/bin/
 src/Utils/CorrectionConstructionFile/obj/
+src/Germadent.Rms.App/bin/
+src/Germadent.Rms.App/obj/
