--- a/src/Germadent.Rms.App/Germadent.Rms.App.csproj
+++ b/src/Germadent.Rms.App/Germadent.Rms.App.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Germadent.Rma.App\Germadent.Rma.App\Germadent.Rma.App.csproj" />
+  </ItemGroup>
+
 </Project>
