--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ src/Utils/CorrectionConstructionFile/bin/
 src/Utils/CorrectionConstructionFile/obj/
 src/Germadent.Rms.App/bin/
 src/Germadent.Rms.App/obj/
+src/Germadent.Client.Common/bin/
+src/Germadent.Client.Common/obj/
