--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ src/Germadent.Rms.App/bin/
 src/Germadent.Rms.App/obj/
 src/Germadent.Client.Common/bin/
 src/Germadent.Client.Common/obj/
+src/Germadent.Model/obj/
