--- a/src/Germadent.Client.Common/Germadent.Client.Common.csproj
+++ b/src/Germadent.Client.Common/Germadent.Client.Common.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Germadent.Common\Germadent.Common.csproj" />
-    <ProjectReference Include="..\Germadent.Rma.Model\Germadent.Model.csproj" />
+    <ProjectReference Include="..\Germadent.Model\Germadent.Model.csproj" />
     <ProjectReference Include="..\Germadent.UI\Germadent.UI.csproj" />
   </ItemGroup>
 
