--- a/src/Germadent.Rma.App.Test/Germadent.Rma.App.Test.csproj
+++ b/src/Germadent.Rma.App.Test/Germadent.Rma.App.Test.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Germadent.Model\Germadent.Model.csproj" />
     <ProjectReference Include="..\Germadent.Rma.App\Germadent.Rma.App\Germadent.Rma.App.csproj" />
-    <ProjectReference Include="..\Germadent.Rma.Model\Germadent.Model.csproj" />
     <ProjectReference Include="..\Germadent.TestUtils\Germadent.TestUtils.csproj" />
   </ItemGroup> 
 
