--- a/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Germadent.Rma.App.csproj
@@ -29,7 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Germadent.Client.Common\Germadent.Client.Common.csproj" />
     <ProjectReference Include="..\..\Germadent.Common\Germadent.Common.csproj" />
-    <ProjectReference Include="..\..\Germadent.Rma.Model\Germadent.Model.csproj" />
+    <ProjectReference Include="..\..\Germadent.Model\Germadent.Model.csproj" />
     <ProjectReference Include="..\..\Germadent.UI\Germadent.UI.csproj" />
     <ProjectReference Include="..\..\Germadent.UserManagementCenter.Model\Germadent.UserManagementCenter.Model.csproj" />
   </ItemGroup>
