--- a/src/Germadent.Rms.App/Germadent.Rms.App.csproj
+++ b/src/Germadent.Rms.App/Germadent.Rms.App.csproj
@@ -17,7 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Germadent.Client.Common\Germadent.Client.Common.csproj" />
     <ProjectReference Include="..\Germadent.Common\Germadent.Common.csproj" />
-    <ProjectReference Include="..\Germadent.Rma.Model\Germadent.Model.csproj" />
+    <ProjectReference Include="..\Germadent.Model\Germadent.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
