--- a/src/Germadent.WebApi/Germadent.WebApi.csproj
+++ b/src/Germadent.WebApi/Germadent.WebApi.csproj
@@ -31,8 +31,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Germadent.Common\Germadent.Common.csproj" />
-    <ProjectReference Include="..\Germadent.Rma.Model\Germadent.Model.csproj" />
-    <ProjectReference Include="..\Germadent.UserManagementCenter.Model\Germadent.UserManagementCenter.Model.csproj" />
+    <ProjectReference Include="..\Germadent.Model\Germadent.Model.csproj" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
