--- a/src/Germadent.Rms.App/App.config
+++ b/src/Germadent.Rms.App/App.config
@@ -6,7 +6,7 @@
     <add key="DataServiceUrl" value="http://localhost:5005"/>
 
     <!--Режим работы (Mock - тестовые данные, Server - сервер )-->
-    <add key="WorkMode" value="Server"/>
+    <add key="WorkMode" value="Mock"/>
 
   </appSettings>
 </configuration>
