--- a/src/Germadent.UserManagementCenter.App/Germadent.UserManagementCenter.App.csproj
+++ b/src/Germadent.UserManagementCenter.App/Germadent.UserManagementCenter.App.csproj
@@ -21,8 +21,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Germadent.Common\Germadent.Common.csproj" />
+    <ProjectReference Include="..\Germadent.Model\Germadent.Model.csproj" />
     <ProjectReference Include="..\Germadent.UI\Germadent.UI.csproj" />
-    <ProjectReference Include="..\Germadent.UserManagementCenter.Model\Germadent.UserManagementCenter.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
