Настроили иконки приложений

--- a/src/Germadent.Rms.App/Germadent.Rms.App.csproj
+++ b/src/Germadent.Rms.App/Germadent.Rms.App.csproj
@@ -21,9 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="logo.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
+    <Resource Include="logo.png" />
   </ItemGroup>
 
   <ItemGroup>
