Фильтрация списка заказ нарядов, протащили статус на клиента

--- a/src/Germadent.Rms.App/Germadent.Rms.App.csproj
+++ b/src/Germadent.Rms.App/Germadent.Rms.App.csproj
@@ -39,4 +39,16 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Views\OrdersFilterWindow.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+  </ItemGroup>
+
 </Project>
