--- a/src/Germadent.Client.Common/Germadent.Client.Common.csproj
+++ b/src/Germadent.Client.Common/Germadent.Client.Common.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.12.3" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.3" />
   </ItemGroup>
 
   <ItemGroup>
