Сделали отчет по зарплате

--- a/src/Germadent.WebApi/Germadent.WebApi.csproj
+++ b/src/Germadent.WebApi/Germadent.WebApi.csproj
@@ -17,6 +17,9 @@
     <None Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Templates\GermadentLab_Salary.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
