--- a/src/Germadent.WebApi/appsettings.json
+++ b/src/Germadent.WebApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Data Source=90.189.217.120;Initial Catalog=Germadent_Develop;User Id=ofm; Password=gdl2020;MultipleActiveResultSets=true",
+  "ConnectionString": "Data Source=.\\SQLEXPRESS;Initial Catalog=Germadent; Integrated Security=true; MultipleActiveResultSets=true",
   "AllowedHosts": "*",
   "Urls": "http://*:5005"
 }
